--- a/dashboard.html
+++ b/dashboard.html
@@ -109,6 +109,31 @@
         .card-logo-glow {
             filter: drop-shadow(0 0 8px rgba(79, 70, 229, 0.3));
         }
+        /* Responsive pour mobile */
+        @media (max-width: 640px) {
+            .container, .max-w-6xl { padding: 0.5rem !important; }
+            .card-container { max-width: 100vw; }
+            .card-3d { height: 160px; min-height: 140px; transition: transform 0.5s; }
+            .card-front, .card-back { padding: 12px 8px 10px 8px; border-radius: 12px; font-size: 0.95rem; }
+            .premium-gradient { font-size: 0.95rem; }
+            .flex.items-center.space-x-4 > img { width: 2.2rem; height: 2.2rem; }
+            .h-10 { height: 2.2rem !important; }
+            .w-10 { width: 2.2rem !important; }
+            .rounded-xl, .rounded-2xl { border-radius: 0.8rem !important; }
+            .p-6 { padding: 1rem !important; }
+            .p-4 { padding: 0.7rem !important; }
+            .mb-8 { margin-bottom: 1.2rem !important; }
+            .text-2xl { font-size: 1.2rem !important; }
+            .text-xl { font-size: 1rem !important; }
+            .text-lg { font-size: 0.95rem !important; }
+            .shadow-md, .shadow-lg { box-shadow: 0 2px 8px rgba(0,0,0,0.10) !important; }
+            .grid-cols-1, .md\:grid-cols-3, .md\:grid-cols-2 { grid-template-columns: 1fr !important; }
+            .flex.md\:flex-row { flex-direction: column !important; }
+            .h-64 { height: 180px !important; }
+            .w-full.md\:w-2\/3, .w-full.md\:w-1\/3 { width: 100% !important; }
+            .space-x-3 { gap: 0.5rem !important; }
+            .mt-6 { margin-top: 0.7rem !important; }
+        }
     </style>
 </head>
 <body class="bg-gray-50 font-sans">
@@ -116,14 +141,14 @@
     <header class="bg-white shadow-sm py-4 px-6">
         <div class="flex justify-between items-center">
             <div class="flex items-center">
-                <img src="C:\Users\aser\Downloads\logo.png" alt="Logo Revolut" class="h-10 w-10 rounded-full mr-3" />
+                <img src="images/logo.png" alt="Logo Revolut" class="h-10 w-10 rounded-full mr-3" />
             </div>
             <div class="flex items-center space-x-4">
                 <button id="logout-btn" class="flex items-center text-indigo-600 hover:text-indigo-800 focus:outline-none focus:ring-2 focus:ring-indigo-400 rounded">
                     <i class="fas fa-sign-out-alt mr-2"></i>
                     <span>Déconnexion</span>
                 </button>
-                <img src="C:\Users\aser\Downloads\profil.png" alt="Profil utilisateur" class="h-10 w-10 rounded-full border-2 border-indigo-500" />
+                <img src="images/profil.png" alt="Profil utilisateur" class="h-10 w-10 rounded-full border-2 border-indigo-500" />
             </div>
         </div>
     </header>
