--- a/dashboard.html
+++ b/dashboard.html
@@ -144,7 +144,7 @@
                 <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/Revolut_Logo_%282021%29.svg" alt="Logo Revolut" class="h-10 w-10 rounded-full mr-3 bg-white p-1" />
             </div>
             <div class="flex items-center space-x-4">
-                <button id="logout-btn" class="flex items-center text-indigo-600 hover:text-indigo-800 focus:outline-none focus:ring-2 focus:ring-indigo-400 rounded">
+                <button id="logout-btn" class="flex items-center text-indigo-600 hover:text-indigo-800 focus:outline-none focus:ring-2 focus:ring-indigo-400 rounded transition-colors duration-200">
                     <i class="fas fa-sign-out-alt mr-2"></i>
                     <span>Déconnexion</span>
                 </button>
@@ -359,13 +359,30 @@
         </section>
     </main>
     <footer class="text-center text-xs text-gray-400 py-6">&copy; 2025 MaBanque. Tous droits réservés.</footer>
+    <div id="logoutModal" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-40 z-50 hidden">
+        <div class="bg-white rounded-xl shadow-lg p-8 max-w-sm w-full text-center animate-fade-in">
+            <h3 class="text-lg font-semibold mb-4 text-gray-800">Voulez-vous vraiment vous déconnecter&nbsp;?</h3>
+            <div class="flex justify-center gap-4 mt-6">
+                <button id="confirmLogout" class="bg-indigo-600 hover:bg-indigo-700 text-white px-5 py-2 rounded-lg font-semibold transition">Oui</button>
+                <button id="cancelLogout" class="bg-gray-200 hover:bg-gray-300 text-gray-700 px-5 py-2 rounded-lg font-semibold transition">Non</button>
+            </div>
+        </div>
+    </div>
     <script>
     document.addEventListener('DOMContentLoaded', function() {
         // Déconnexion
-        document.getElementById('logout-btn').addEventListener('click', function() {
-            if(confirm('Voulez-vous vraiment vous déconnecter ?')) {
-                window.location.href = 'login.html';
-            }
+        const logoutBtn = document.getElementById('logout-btn');
+        const logoutModal = document.getElementById('logoutModal');
+        const confirmLogout = document.getElementById('confirmLogout');
+        const cancelLogout = document.getElementById('cancelLogout');
+        logoutBtn.addEventListener('click', function() {
+            logoutModal.classList.remove('hidden');
+        });
+        confirmLogout.addEventListener('click', function() {
+            window.location.href = 'login.html';
+        });
+        cancelLogout.addEventListener('click', function() {
+            logoutModal.classList.add('hidden');
         });
         // Carte interactive flip 3D
         const bankCard = document.getElementById('bankCard');
