--- a/dashboard.html
+++ b/dashboard.html
@@ -141,14 +141,14 @@
     <header class="bg-white shadow-sm py-4 px-6">
         <div class="flex justify-between items-center">
             <div class="flex items-center">
-                <img src="https://svgshare.com/i/14rG.svg" alt="Logo MaBanque AI" class="h-10 w-10 rounded-full mr-3 bg-white p-1 border-2 border-indigo-500 shadow-sm" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/Revolut_Logo_%282021%29.svg" alt="Logo Revolut" class="h-10 w-10 rounded-full mr-3 bg-white p-1 border-2 border-indigo-500 shadow-sm" />
             </div>
             <div class="flex items-center space-x-4">
                 <button id="logout-btn" class="flex items-center text-indigo-600 hover:text-indigo-800 focus:outline-none focus:ring-2 focus:ring-indigo-400 rounded transition-colors duration-200">
                     <i class="fas fa-sign-out-alt mr-2"></i>
                     <span>Déconnexion</span>
                 </button>
-                <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=CopilotAI&backgroundColor=gradientLinear,blue,indigo,purple" alt="Profil utilisateur AI" class="h-10 w-10 rounded-full border-2 border-indigo-500 shadow-sm" />
+                <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Profil utilisateur" class="h-10 w-10 rounded-full border-2 border-indigo-500 shadow-sm" />
             </div>
         </div>
     </header>
