--- a/dashboard.html
+++ b/dashboard.html
@@ -139,16 +139,17 @@
 <body class="bg-gray-50 font-sans">
     <!-- Header professionnel -->
     <header class="bg-white shadow-sm py-4 px-6">
-        <div class="flex justify-between items-center">
-            <div class="flex items-center">
-                <img src="logo.png" alt="Logo MaBanque" class="h-10 w-10 rounded-full mr-3 bg-white p-1 border-2 border-indigo-500 shadow-sm" />
+        <div class="flex justify-between items-center gap-6">
+            <div class="flex items-center gap-3">
+                <img src="logo.png" alt="Logo MaBanque" class="h-12 w-12 rounded-full bg-white p-1 border-2 border-indigo-500 shadow-md" />
+                <span class="text-2xl font-bold text-indigo-700 tracking-wide hidden sm:inline">MaBanque</span>
             </div>
-            <div class="flex items-center space-x-4">
-                <button id="logout-btn" class="flex items-center text-indigo-600 hover:text-indigo-800 focus:outline-none focus:ring-2 focus:ring-indigo-400 rounded transition-colors duration-200">
+            <div class="flex items-center gap-4">
+                <button id="logout-btn" class="flex items-center text-indigo-600 hover:text-indigo-800 focus:outline-none focus:ring-2 focus:ring-indigo-400 rounded transition-colors duration-200 px-3 py-1">
                     <i class="fas fa-sign-out-alt mr-2"></i>
                     <span>Déconnexion</span>
                 </button>
-                <img src="profil.png" alt="Profil utilisateur" class="h-10 w-10 rounded-full border-2 border-indigo-500 shadow-sm" />
+                <img src="profil.png" alt="Profil utilisateur" class="h-12 w-12 rounded-full border-2 border-indigo-500 shadow-md object-cover" />
             </div>
         </div>
     </header>
